# udp-server-cli

./: .env  .env.example  .gitignore  Cargo.toml  README.md
migrations/: 20211205072241_items_table.up.sql  20211205072431_fill_items_table.down.sql  20211205072431_fill_items_table.up.sql
src/: db.rs  error.rs  lib.rs  logging.rs  main.rs  server.rs
src/db/: mod.rs  models.rs
src/server/: error.rs  validation.rs
